--- a/package.json
+++ b/package.json
@@ -12,19 +12,24 @@
   "private": true,
   "dependencies": {
     "@angular/animations": "~9.0.7",
+    "@angular/cdk": "^9.2.4",
     "@angular/common": "~9.0.7",
     "@angular/compiler": "~9.0.7",
     "@angular/core": "~9.0.7",
     "@angular/forms": "~9.0.7",
+    "@angular/material": "^9.2.4",
     "@angular/platform-browser": "~9.0.7",
     "@angular/platform-browser-dynamic": "~9.0.7",
     "@angular/router": "~9.0.7",
+    "@types/jquery": "^3.5.1",
     "@types/leaflet": "^1.5.12",
     "body-parser": "^1.19.0",
-    "bootstrap": "^4.5.0",
+    "bootstrap": "^4.5.2",
     "express": "^4.17.1",
+    "jquery": "^3.5.1",
     "leaflet": "^1.6.0",
     "mongoose": "^5.9.17",
+    "popper.js": "^1.16.1",
     "rxjs": "~6.5.4",
     "rxjs-compat": "^6.5.5",
     "tslib": "^1.10.0",
